join now description spacing fixed

--- a/css/styles.css
+++ b/css/styles.css
@@ -505,6 +505,9 @@ hr{
         margin: 20px;
         gap: 30px;
     }
+    .join-now-text .join-now-description{
+        margin: 0;
+    }
     .bmi-calculator-area{
         padding: 20px;
     }
@@ -546,6 +549,6 @@ hr{
     .banner-area{
         flex-direction: column;
     }
-}   main, footer{
+}   footer{
     display: none;
 }
